# alternative_data_credit_scoring

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_vi.md  docker-compose.yml  pyproject.toml  requirements.txt  scorecard_master_v2.md
.github/workflows/: ci.yml
configs/: dsr_config.json
data/: feature_dictionary.json  sme_altdata_sample.csv
eda/: eda_report.py
eda/tables/: information_value.csv  missingness.csv  numeric_summary.csv
src/scoresight/: __init__.py  data_generator.py
src/scoresight/features/: __init__.py  dsr_calculator.py  iv_calculator.py
src/scoresight/serving/: __init__.py  app.py  demo_client.py
src/scoresight/training/: __init__.py  score_mapping.py  train.py
t1_sources/: generate_dataset.py
t3_features/: dsr_calculator.py  iv_calculator.py
t4_training/: score_mapping.py  train.py
t5_serving/: app.py  demo_client.py
t6_ui/: README_UI.md  streamlit_app.py
tests/: test_api.py  test_dsr.py  test_score_mapping.py
